--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
 version: "3.9"
 
 services:
-  postgres:
+  customerpostgres:
     container_name: customer-postgres
     image: postgres:latest
     restart: always
     volumes:
-      - postgres_data:/var/postgres_data
+      - customer_data:/var/customer_data
     environment:
-      - PGDATA=/var/postgres_data
+      - PGDATA=/var/customer_data
       - POSTGRES_USER=${CUSTOMER_POSTGRES_USER}
       - POSTGRES_PASSWORD=${CUSTOMER_POSTGRES_PASSWORD}
       - POSTGRES_DB=customerdb
@@ -16,15 +16,15 @@ services:
       - ${CUSTOMER_POSTGRES_PORT}:${CUSTOMER_POSTGRES_PORT}
     env_file:
       - .env
-  backend:
+  customerserver:
     container_name: customer-server
     build: .
     ports:
       - ${CUSTOMER_RMI_PORT}:${CUSTOMER_RMI_PORT}
     links:
-      - postgres
+      - customerpostgres
     env_file:
       - .env
 
 volumes:
-  postgres_data:
+  customer_data:
