--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,10 @@ jar {
     }
 }
 
+configurations.all {
+    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
+}
+
 test {
     useJUnitPlatform()
 }
